# thanksgiving-alpha

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_25YEARS.md  ANALYSIS_NASDAQ100_25YEARS.md  ANALYSIS_SP500_25YEARS.md  CITATION.cff  COMPARISON_CYBER_MONDAY_VS_THANKSGIVING.md  COMPREHENSIVE_CYBER_MONDAY_ANALYSIS.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_CS.md  Makefile  README.md  REFERENCES.md  STATISTICAL_RESULTS_SUMMARY.md  djia_analysis_output.txt  nasdaq100_analysis_output.txt  nasdaq100_full_output.txt  nasdaq100_results_full.txt  pyproject.toml  sp500_full_output.txt  sp500_results_full.txt
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml
configs/: djia_25years.yaml  djia_cyber_monday.yaml  example_djia.yaml  nasdaq100_25years.yaml  nasdaq100_cyber_monday.yaml  sp500_25years.yaml  sp500_cyber_monday.yaml  test_small.yaml
src/tgalpha/: calendar_utils.py  cli.py  config.py  coverage.py  holidays.py  ranking.py  report.py  stats.py  stats_tests.py  universe.py
src/tgalpha/data_providers/: base.py  yahoo.py
tests/: conftest.py  test_calendar_utils.py  test_holidays.py  test_ranking.py  test_stats.py
