[tool.poetry]
name = "thanksgiving-alpha"
version = "0.1.0"
description = "Seasonality statistics around US Thanksgiving with configurable windows."
authors = ["Martin <martin@example.com>"]
readme = "README.md"
packages = [{ include = "tgalpha", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
polars = "^1.9.0"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
pydantic = "^2.8.2"
typer = {version = "^0.12.3", extras = ["all"]}
yfinance = "^0.2.50"
jinja2 = "^3.1.4"
plotly = "^5.24.0"
python-dateutil = "^2.9.0.post0"
holidays = "^0.57"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
hypothesis = "^6.112.1"
ruff = "^0.6.8"
black = "^24.8.0"
mypy = "^1.13.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
tgalpha = "tgalpha.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
