[tool.poetry]
name = "thanksgiving-alpha"
version = "1.0.0"
description = "Quantitative analysis tool for measuring stock performance patterns around US Thanksgiving"
authors = ["Martin Liebl <lieblm@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lieblm/thanksgiving-alpha"
repository = "https://github.com/lieblm/thanksgiving-alpha"
documentation = "https://github.com/lieblm/thanksgiving-alpha/blob/main/README.md"
keywords = [
    "quantitative-finance",
    "seasonality",
    "thanksgiving",
    "stock-market",
    "djia",
    "trading",
    "market-anomalies",
    "financial-analysis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "tgalpha", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
polars = "^1.9.0"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
pydantic = "^2.8.2"
typer = {version = "^0.12.3", extras = ["all"]}
yfinance = "^0.2.50"
jinja2 = "^3.1.4"
plotly = "^5.24.0"
python-dateutil = "^2.9.0.post0"
holidays = "^0.57"
scipy = "^1.11.0"
statsmodels = "^0.14.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
hypothesis = "^6.112.1"
ruff = "^0.6.8"
black = "^24.8.0"
mypy = "^1.13.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
tgalpha = "tgalpha.cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
